2007-07-23  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: write interface prerequisites

2007-07-22  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/glib-2.0.vala: add basic internationalization functionality

2007-07-22  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/valamember.vala: add cheader filename logic usable for all
	  Vala.Member types.
	* vala/valamethod.vala: parse cheader_filename CCode attribute
	  argument
	* vala/valadatatype.vala: fix get_cheader_filenames method signature
	  to override the Symbol method instead of defining a new virtual
	  method
	* vala/valasourcefile.vala: adopt add_symbol_dependency to use the fact
	  all Vala.Symbol types maintain their list of headers

2007-07-22  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: more fixes for libraries with generic
	  types

2007-07-22  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala: use lazy initialization for array_types
	  hash table

2007-07-22  Jürg Billeter  <j@bitron.ch>

	* vala/valainterface.vala, vala/valainterfacewriter.vala: support
	  libraries with generic types

2007-07-22  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: allow inner classes to access private
	  members of outer classes

2007-07-21  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/parser.y, vala/scanner.l, vala/vala.h,
	  vala/valaarray.vala, vala/valaarraylengthfield.vala,
	  vala/valaarrayresizemethod.vala, vala/valaattributeprocessor.vala,
	  vala/valablock.vala, vala/valabreakstatement.vala,
	  vala/valacallback.vala, vala/valaclass.vala,
	  vala/valacodecontext.vala, vala/valacodenode.vala,
	  vala/valacodevisitor.vala, vala/valaconstant.vala,
	  vala/valaconstructor.vala, vala/valacontinuestatement.vala,
	  vala/valacreationmethod.vala, vala/valadatatype.vala,
	  vala/valadeclarationstatement.vala, vala/valadestructor.vala,
	  vala/valadostatement.vala, vala/valaemptystatement.vala,
	  vala/valaenum.vala, vala/valaenumvalue.vala,